version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/Results/CompositeFailureResults/ShearCrimpingSettings.rst.txt
.. vale off



:class:`ShearCrimpingSettings`
==============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.Results.CompositeFailureResults.ShearCrimpingSettings(internalObject: Ansys.Common.Interop.DSObjectsAuto.IDSCompositeFailureCriteriaAuto)

   Bases: :py:obj:`object`


   
   Defines the configuration for the Face Sheet Crimping failure criterion for sandwich structures.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ShearCrimpingSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Reset`
            - Resets the settings to their default values.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Active property.
          * - :py:attr:`~CoreWeightingFactor`
            - Gets or sets the weighting factor of core material of crimping allowable.
          * - :py:attr:`~FaceSheetWeightingFactor`
            - Gets or sets the weighting factor of face sheets of crimping allowable.
          * - :py:attr:`~WeightingFactor`
            - Gets or sets the weighting factor for shear crimping failure.







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Active property.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoreWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor of core material of crimping allowable.
















   ..
       !! processed by numpydoc !!

.. py:property:: FaceSheetWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor of face sheets of crimping allowable.
















   ..
       !! processed by numpydoc !!

.. py:property:: WeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for shear crimping failure.
       The corresponding failure label is 'sc'.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Reset() -> None

   
   Resets the settings to their default values.

   ..
       !! processed by numpydoc !!



.. vale on